<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="PaperInterval" Id="{4d58bf34-d4a6-4a37-9769-ed3f0dcf85e9}">
    <Declaration><![CDATA[TYPE PaperInterval :
STRUCT
	start : INT;
	end : INT;
	
	wrap : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>